--- a/mockup_app/src/main/res/layout/activity_main.xml
+++ b/mockup_app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,51 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.mockup.mockup_app.MainActivity"
-    tools:ignore="MergeRootFrame" />
+    tools:ignore="MergeRootFrame" >
+
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="0dp"
+            android:src="@drawable/image1"
+            android:paddingLeft="0dp"
+            android:paddingTop="0dp"
+            android:paddingRight="0dp"
+            android:paddingBottom="0dp"
+            android:visibility="visible"
+            android:cropToPadding="true"
+            android:clickable="false"
+            android:baselineAlignBottom="false"
+            android:focusableInTouchMode="false"
+            android:scaleType="fitXY"/>
+
+    <!--settings button on the up right-->
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="80dp"
+        android:layout_height="-50dp"
+        android:text="N"
+        android:textColor="#00000000"
+        android:id="@+id/config_button"
+        android:background="#00000000"
+        android:layout_gravity="right|top"
+        />
+
+    <!--stats button on the left-->
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="78dp"
+        android:layout_height="82dp"
+        android:text="New"
+        android:textColor="#00000000"
+        android:id="@+id/stats_button"
+        android:background="#00000000"
+        android:layout_gravity="left|bottom" />
+
+</FrameLayout>
