--- a/mockup_app/src/main/res/layout/fragment_stats.xml
+++ b/mockup_app/src/main/res/layout/fragment_stats.xml
@@ -6,6 +6,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.mockup.mockup_app.MainActivity$PlaceholderFragment">
+    tools:context="com.mockup.mockup_app.StatsActivity$PlaceholderFragment">
 
 </RelativeLayout>
