--- a/mockup_app/src/main/res/values/styles.xml
+++ b/mockup_app/src/main/res/values/styles.xml
@@ -5,4 +5,11 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <!--<style name="ActionBar" parent="@android:style/Widget.Holo.ActionBar">-->
+        <!--<item name="android:background">@drawable/title</item>-->
+    <!--</style>-->
+    <!--<style name="MyTheme" parent="@android:style/Theme.Holo.Light">-->
+        <!--<item name="android:actionBarStyle">@style/ActionBar</item>-->
+    <!--</style>-->
+
 </resources>
