--- a/mockup_app/src/main/res/layout/activity_config.xml
+++ b/mockup_app/src/main/res/layout/activity_config.xml
@@ -44,4 +44,24 @@
         android:id="@+id/stats_button"
         android:background="#00000000"
         android:layout_gravity="left|bottom" />
+
+
+    <SeekBar
+        android:id="@+id/seekBar1"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="145dp"
+        android:max="250"
+        android:layout_gravity="center_horizontal|top" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/seekBar1"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="-70dp"
+        android:layout_gravity="center"
+        android:textSize="24dp"/>
 </FrameLayout>
