--- a/mockup_app/src/main/res/layout/activity_main.xml
+++ b/mockup_app/src/main/res/layout/activity_main.xml
@@ -48,4 +48,16 @@
         android:background="#00000000"
         android:layout_gravity="left|bottom" />
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Or is the King!!!"
+        android:id="@+id/textView"
+        android:layout_gravity="center" />
+
 </FrameLayout>
