--- a/mockup_app/src/main/res/layout/activity_add.xml
+++ b/mockup_app/src/main/res/layout/activity_add.xml
@@ -3,15 +3,16 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mockup.mockup_app.ConfigActivity"
+    tools:context="com.mockup.mockup_app.StatsActivity"
     tools:ignore="MergeRootFrame" >
 
+    <!--Screen image-->
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/add"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="0dp"
-        android:src="@drawable/settings"
+        android:src="@drawable/add"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
         android:paddingRight="0dp"
@@ -23,7 +24,7 @@
         android:focusableInTouchMode="false"
         android:scaleType="fitXY"/>
 
-    <!--home button on down middle-->
+    <!--Home button-->
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="78dp"
@@ -34,6 +35,17 @@
         android:background="#00000000"
         android:layout_gravity="center_horizontal|bottom" />
 
+    <!--settings button on the up right-->
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="80dp"
+        android:layout_height="-40dp"
+        android:text="N"
+        android:textColor="#00000000"
+        android:id="@+id/config_button"
+        android:background="#00000000"
+        android:layout_gravity="right|top"
+        />
     <!--stats button on the left-->
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -45,34 +57,4 @@
         android:background="#00000000"
         android:layout_gravity="left|bottom" />
 
-
-    <SeekBar
-        android:id="@+id/seekBar1"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="130dp"
-        android:max="250"
-        android:layout_gravity="center_horizontal|top" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/seekBar1"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="-70dp"
-        android:layout_gravity="center"
-        android:textSize="24dp"/>
-
-    <!--add button on down right-->
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="78dp"
-        android:layout_height="82dp"
-        android:text="New"
-        android:textColor="#00000000"
-        android:id="@+id/add_button"
-        android:background="#00000000"
-        android:layout_gravity="right|bottom" />
 </FrameLayout>
