--- a/mockup_app/src/main/res/layout/activity_main.xml
+++ b/mockup_app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,17 @@
         android:background="#00000000"
         android:layout_gravity="left|bottom" />
 
+    <!--add button on down right-->
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="78dp"
+        android:layout_height="82dp"
+        android:text="New"
+        android:textColor="#00000000"
+        android:id="@+id/add_button"
+        android:background="#00000000"
+        android:layout_gravity="right|bottom" />
+
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="wrap_content"
