--- a/mockup_app/src/main/res/layout/activity_stats.xml
+++ b/mockup_app/src/main/res/layout/activity_stats.xml
@@ -47,6 +47,17 @@
         android:layout_gravity="right|top"
         />
 
+   <!--add button on down right-->
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="78dp"
+        android:layout_height="82dp"
+        android:text="New"
+        android:textColor="#00000000"
+        android:id="@+id/add_button"
+        android:background="#00000000"
+        android:layout_gravity="right|bottom" />
+
 </FrameLayout>
 
 
